--- a/index.html
+++ b/index.html
@@ -122,9 +122,6 @@
 										</h1>
 										<ol class="breadcrumb mb-4 pb-2">
 											<li class="breadcrumb-item fs-5 text-light">
-												Commercial
-											</li>
-											<li class="breadcrumb-item fs-5 text-light">
 												Residential
 											</li>
 										</ol>
@@ -145,12 +142,9 @@
 											Welcome to Modern Choice Renovation
 										</h5>
 										<h1 class="display-2 text-light mb-3 animated slideInDown">
-											Professional Tiling & Painting Services
+											Professional Maintainance and Renovation Services
 										</h1>
 										<ol class="breadcrumb mb-4 pb-2">
-											<li class="breadcrumb-item fs-5 text-light">
-												Commercial
-											</li>
 											<li class="breadcrumb-item fs-5 text-light">
 												Residential
 											</li>
@@ -217,18 +211,18 @@
 							<div class="border-start border-5 border-primary ps-4 mb-5">
 								<h6 class="text-body text-uppercase mb-2">About Us</h6>
 								<h1 class="display-6 mb-0">
-									Unique Solutions For Residentials & Commercials!
+									Unique Solutions For Residentials
 								</h1>
 							</div>
 							<p>
 								At modern choice renovation, we pride ourselves on being your
 								go-to destination for exceptional home renovations. With a
 								passion for creating spaces that seamlessly blend functionality
-								and aesthetics, we specialize in transforming residences and
-								commercial establishments alike. Our team of dedicated home
-								renovation experts brings a wealth of experience to every
-								project, ensuring that each space we touch reflects the unique
-								personality and preferences of our clients.
+								and aesthetics, we specialize in transforming residences
+								establishments alike. Our team of dedicated home renovation
+								experts brings a wealth of experience to every project, ensuring
+								that each space we touch reflects the unique personality and
+								preferences of our clients.
 							</p>
 
 							<div class="border-top mt-4 pt-4">
@@ -237,13 +231,13 @@
 										<i
 											class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
 										></i>
-										<h6 class="mb-0">Ontime at services</h6>
+										<h6 class="mb-0">Quality workmanship</h6>
 									</div>
 									<div class="col-sm-4 d-flex wow fadeIn" data-wow-delay="0.3s">
 										<i
 											class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
 										></i>
-										<h6 class="mb-0">24/7 hours services</h6>
+										<h6 class="mb-0">At your service 24/7</h6>
 									</div>
 									<div class="col-sm-4 d-flex wow fadeIn" data-wow-delay="0.5s">
 										<i
@@ -271,12 +265,12 @@
 						</div>
 						<p class="mb-5">
 							At the heart of our approach is a commitment to providing unique
-							solutions for both residential and commercial spaces. Whether it's
-							a cozy home, a vibrant office, or a stylish retail space, we
-							believe in crafting environments that not only meet but exceed
-							expectations. From renovating kitchens that inspire culinary
-							creativity to rejuvenating bathrooms into personal sanctuaries,
-							our attention to detail and dedication to quality set us apart.
+							solutions for residential spaces. Whether it's a cozy home, a
+							vibrant office, or a stylish retail space, we believe in crafting
+							environments that not only meet but exceed expectations. From
+							renovating kitchens that inspire culinary creativity to
+							rejuvenating bathrooms into personal sanctuaries, our attention to
+							detail and dedication to quality set us apart.
 						</p>
 						<div class="row gy-5 gx-4">
 							<div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
@@ -409,7 +403,7 @@
 						<div class="service-item bg-light overflow-hidden h-100">
 							<img class="img-fluid" src="img/service-5.jpg" alt="" />
 							<div class="service-text position-relative text-center h-100 p-4">
-								<h5 class="mb-3">Tiling and Painting</h5>
+								<h5 class="mb-3">Flooring</h5>
 
 								<a class="small" href="service.html"
 									>Show<i class="fa fa-arrow-right ms-3"></i
@@ -422,6 +416,42 @@
 							<img class="img-fluid" src="img/service-6.jpg" alt="" />
 							<div class="service-text position-relative text-center h-100 p-4">
 								<h5 class="mb-3">Interior Design</h5>
+
+								<a class="small" href="service.html"
+									>Show<i class="fa fa-arrow-right ms-3"></i
+								></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+						<div class="service-item bg-light overflow-hidden h-100">
+							<img class="img-fluid" src="img/img9.jpg" alt="" />
+							<div class="service-text position-relative text-center h-100 p-4">
+								<h5 class="mb-3">Basements</h5>
+
+								<a class="small" href="service.html"
+									>Show<i class="fa fa-arrow-right ms-3"></i
+								></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+						<div class="service-item bg-light overflow-hidden h-100">
+							<img class="img-fluid" src="img/img10.jpg" alt="" />
+							<div class="service-text position-relative text-center h-100 p-4">
+								<h5 class="mb-3">Windows</h5>
+
+								<a class="small" href="service.html"
+									>Show<i class="fa fa-arrow-right ms-3"></i
+								></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+						<div class="service-item bg-light overflow-hidden h-100">
+							<img class="img-fluid" src="img/img11.jpg" alt="" />
+							<div class="service-text position-relative text-center h-100 p-4">
+								<h5 class="mb-3">Ceramics</h5>
 
 								<a class="small" href="service.html"
 									>Show<i class="fa fa-arrow-right ms-3"></i
@@ -588,11 +618,7 @@
 						</p>
 					</div>
 					<div class="col-lg-4 col-md-6">
-						<h4 class="text-light mb-4">Address</h4>
-						<p>
-							<i class="fa fa-map-marker-alt me-3"></i>45260 Lenora Crescent,
-							Chilliwack, BC Canada
-						</p>
+						<h4 class="text-light mb-4">Contact</h4>
 						<p><i class="fa fa-phone-alt me-3"></i>+1 778-240-0828</p>
 						<p><i class="fa fa-envelope me-3"></i>shafiq99@hotmail.ca</p>
 						<p><i class="fab fa-instagram me-3"></i>@modernchoicerenovation</p>
