--- a/contact.html
+++ b/contact.html
@@ -172,11 +172,7 @@
 						</p>
 					</div>
 					<div class="col-lg-4 col-md-6">
-						<h4 class="text-light mb-4">Address</h4>
-						<p>
-							<i class="fa fa-map-marker-alt me-3"></i>45260 Lenora Crescent,
-							Chilliwack, BC Canada
-						</p>
+						<h4 class="text-light mb-4">Contact</h4>
 						<p><i class="fa fa-phone-alt me-3"></i>+1 778-240-0828</p>
 						<p><i class="fa fa-envelope me-3"></i>shafiq99@hotmail.ca</p>
 						<p><i class="fab fa-instagram me-3"></i>@modernchoicerenovation</p>
