--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
 							</div>
 							<div class="col-sm-6">
 								<h3 class="mb-0">Muhammad Shafiq Chaudhry</h3>
-								<p>Engineer</p>
+								<br></br>
 								<h6>Contact Details</h6>
 
 								<p class="mb-0">Call: +1 778-240-0828</p>
@@ -160,16 +160,11 @@
 			<div class="container py-5">
 				<div class="row g-5">
 					<div class="col-lg-5 col-md-6">
-						<h1 class="text-white mb-4 foot">
-							<i class="fa fa-building text-primary me-3"></i>MODERN CHOICE
-							RENOVATION
-						</h1>
-						<p>
-							Transforming Spaces with Expertise: Specializing in Interior
-							Design, Painting, Tiling, Bathroom & Kitchen Renovation. Elevate
-							your surroundings with our passion for craftsmanship and attention
-							to detail.
-						</p>
+						
+							<h4 class="text-light mb-4">Service Areas</h4>
+							<p class="btn btn-link">Lower Mainland</p>
+							<p class="btn btn-link">Fraser Valley</p>
+							<p class="btn btn-link">Chilliwack</p>
 					</div>
 					<div class="col-lg-4 col-md-6">
 						<h4 class="text-light mb-4">Contact</h4>
