--- a/index.html
+++ b/index.html
@@ -177,166 +177,6 @@
 		</div>
 		<!-- Carousel End -->
 
-		<!-- About Start -->
-		<div class="container-xxl py-5">
-			<div class="container">
-				<div class="row g-5">
-					<div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-						<div
-							class="position-relative overflow-hidden ps-5 pt-5 h-100"
-							style="min-height: 400px"
-						>
-							<img
-								class="position-absolute w-100 h-100"
-								src="img/about.jpg"
-								alt=""
-								style="object-fit: cover"
-							/>
-							<div
-								class="position-absolute top-0 start-0 bg-white pe-3 pb-3"
-								style="width: 200px; height: 200px"
-							>
-								<div
-									class="d-flex flex-column justify-content-center text-center bg-primary h-100 p-3"
-								>
-									<h1 class="text-white">25</h1>
-									<h2 class="text-white">Years</h2>
-									<h5 class="text-white mb-0">Experience</h5>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-						<div class="h-100">
-							<div class="border-start border-5 border-primary ps-4 mb-5">
-								<h6 class="text-body text-uppercase mb-2">About Us</h6>
-								<h1 class="display-6 mb-0">
-									Unique Solutions For Residentials
-								</h1>
-							</div>
-							<p>
-								At modern choice renovation, we pride ourselves on being your
-								go-to destination for exceptional home renovations. With a
-								passion for creating spaces that seamlessly blend functionality
-								and aesthetics, we specialize in transforming residences
-								establishments alike. Our team of dedicated home renovation
-								experts brings a wealth of experience to every project, ensuring
-								that each space we touch reflects the unique personality and
-								preferences of our clients.
-							</p>
-
-							<div class="border-top mt-4 pt-4">
-								<div class="row g-4">
-									<div class="col-sm-4 d-flex wow fadeIn" data-wow-delay="0.1s">
-										<i
-											class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
-										></i>
-										<h6 class="mb-0">Quality workmanship</h6>
-									</div>
-									<div class="col-sm-4 d-flex wow fadeIn" data-wow-delay="0.3s">
-										<i
-											class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
-										></i>
-										<h6 class="mb-0">At your service 24/7</h6>
-									</div>
-									<div class="col-sm-4 d-flex wow fadeIn" data-wow-delay="0.5s">
-										<i
-											class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
-										></i>
-										<h6 class="mb-0">Verified Expert</h6>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- About End -->
-
-		<!-- Features Start -->
-		<div class="container-xxl py-5">
-			<div class="container">
-				<div class="row g-5">
-					<div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-						<div class="border-start border-5 border-primary ps-4 mb-5">
-							<h6 class="text-body text-uppercase mb-2">Why Choose Us!</h6>
-							<h1 class="display-6 mb-0">Our Specialization And Features</h1>
-						</div>
-						<p class="mb-5">
-							At the heart of our approach is a commitment to providing unique
-							solutions for residential spaces. Whether it's a cozy home, a
-							vibrant office, or a stylish retail space, we believe in crafting
-							environments that not only meet but exceed expectations. From
-							renovating kitchens that inspire culinary creativity to
-							rejuvenating bathrooms into personal sanctuaries, our attention to
-							detail and dedication to quality set us apart.
-						</p>
-						<div class="row gy-5 gx-4">
-							<div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
-								<div class="d-flex align-items-center mb-3">
-									<i
-										class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
-									></i>
-									<h6 class="mb-0">Large number of services provided</h6>
-								</div>
-							</div>
-							<div class="col-sm-6 wow fadeIn" data-wow-delay="0.2s">
-								<div class="d-flex align-items-center mb-3">
-									<i
-										class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
-									></i>
-									<h6 class="mb-0">25+ years of professional experience</h6>
-								</div>
-							</div>
-							<div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
-								<div class="d-flex align-items-center mb-3">
-									<i
-										class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
-									></i>
-									<h6 class="mb-0">A large number of grateful customers</h6>
-								</div>
-							</div>
-							<div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
-								<div class="d-flex align-items-center mb-3">
-									<i
-										class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
-									></i>
-									<h6 class="mb-0">Always reliable and affordable prices</h6>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-						<div
-							class="position-relative overflow-hidden ps-5 pt-5 h-100"
-							style="min-height: 400px"
-						>
-							<img
-								class="position-absolute w-100 h-100"
-								src="img/feature.jpg"
-								alt=""
-								style="object-fit: cover"
-							/>
-							<div
-								class="position-absolute top-0 start-0 bg-white pe-3 pb-3"
-								style="width: 200px; height: 200px"
-							>
-								<div
-									class="d-flex flex-column justify-content-center text-center bg-primary h-100 p-3"
-								>
-									<h1 class="text-white">25</h1>
-									<h2 class="text-white">Years</h2>
-									<h5 class="text-white mb-0">Experience</h5>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Features End -->
-
 		<!-- Service Start -->
 		<div class="container-xxl py-5">
 			<div class="container">
@@ -347,6 +187,8 @@
 							<h1 class="display-6 mb-0">
 								Construction And Renovation Solutions
 							</h1>
+							<br></br>
+							<p><i class="fa fa-map-marker-alt me-3"></i>Based in Lower Mainland and Fraser Valley</p>
 						</div>
 					</div>
 				</div>
@@ -464,42 +306,6 @@
 		</div>
 		<!-- Service End -->
 
-		<!-- Team Start -->
-		<div class="container-xxl py-5">
-			<div class="container">
-				<div class="row g-5 align-items-end mb-5">
-					<div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-						<div class="border-start border-5 border-primary ps-4">
-							<h6 class="text-body text-uppercase mb-2">Our Team</h6>
-							<h1 class="display-6 mb-0">Expert Worker</h1>
-						</div>
-					</div>
-					<div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-						<p class="mb-0">
-							Specializing in kitchens, bathrooms, and all things interiors, I
-							tailor my skills to suit your individual needs. Your home is a
-							canvas, and I am here to paint it with elements that reflect your
-							personality. Whether it's a cozy kitchen revamp or a luxurious
-							bathroom makeover, I am dedicated to creating spaces that resonate
-							with your unique style.
-						</p>
-					</div>
-				</div>
-				<div class="row g-4">
-					<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-						<div class="team-item position-relative">
-							<img class="img-fluid" src="img/team-1.jpg" alt="" />
-							<div class="team-text bg-white p-4">
-								<h5>Muhammad Shafiq Chaudhry</h5>
-								<span>Engineer</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Team End -->
-
 		<!-- Testimonial Start -->
 		<div class="container-xxl py-5">
 			<div class="container">
@@ -606,16 +412,10 @@
 			<div class="container py-5">
 				<div class="row g-5">
 					<div class="col-lg-5 col-md-6">
-						<h1 class="text-white mb-4 foot">
-							<i class="fa fa-building text-primary me-3"></i>MODERN CHOICE
-							RENOVATION
-						</h1>
-						<p>
-							Transforming Spaces with Expertise: Specializing in Interior
-							Design, Painting, Tiling, Bathroom & Kitchen Renovation. Elevate
-							your surroundings with our passion for craftsmanship and attention
-							to detail.
-						</p>
+						<h4 class="text-light mb-4">Service Areas</h4>
+						<p class="btn btn-link">Lower Mainland</p>
+						<p class="btn btn-link">Fraser Valley</p>
+						<p class="btn btn-link">Chilliwack</p>
 					</div>
 					<div class="col-lg-4 col-md-6">
 						<h4 class="text-light mb-4">Contact</h4>
