--- a/contact.html
+++ b/contact.html
@@ -141,9 +141,9 @@
 								<h3 class="mb-0">Muhammad Shafiq Chaudhry</h3>
 								<br></br>
 								<h6>Contact Details</h6>
-
-								<p class="mb-0">Call: +1 778-240-0828</p>
-								<p class="mb-0">Email: shafiq99@hotmail.ca</p>
+					
+								<p><i class="fa fa-phone-alt me-3"></i><a href="tel:+17782400828">+1 778-240-0828</a></p>
+								<p><i class="fa fa-envelope me-3"></i><a href="mailto:shafiq99@hotmail.ca">shafiq99@hotmail.ca</a></p>
 							</div>
 						</div>
 					</div>
@@ -168,9 +168,9 @@
 					</div>
 					<div class="col-lg-4 col-md-6">
 						<h4 class="text-light mb-4">Contact</h4>
-						<p><i class="fa fa-phone-alt me-3"></i>+1 778-240-0828</p>
-						<p><i class="fa fa-envelope me-3"></i>shafiq99@hotmail.ca</p>
-						<p><i class="fab fa-instagram me-3"></i>@modernchoicerenovation</p>
+						<p><i class="fa fa-phone-alt me-3"></i><a href="tel:+17782400828">+1 778-240-0828</a></p>
+						<p><i class="fa fa-envelope me-3"></i><a href="mailto:shafiq99@hotmail.ca">shafiq99@hotmail.ca</a></p>
+						<p><i class="fab fa-instagram me-3"></i><a href="instagram://user?username=modernchoicerenovation">modernchoicerenovation</a></p>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<h4 class="text-light mb-4">Quick Links</h4>
