--- a/service.html
+++ b/service.html
@@ -145,7 +145,7 @@
 				<div class="row g-4 justify-content-center">
 					<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
 						<div class="service-item bg-light overflow-hidden h-100">
-							<img class="img-fluid" src="img/img1.JPG" alt="" />
+							<img class="img-fluid" src="img/img1.jpg" alt="" />
 							<div class="service-text position-relative text-center h-100 p-4">
 								
 
