--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 					</div>
 					<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
 						<div class="service-item bg-light overflow-hidden h-100">
-							<img class="img-fluid" src="img/service-5.jpg" alt="" />
+							<img class="img-fluid" src="img/floor.jpg" alt="" />
 							<div class="service-text position-relative text-center h-100 p-4">
 								<h5 class="mb-3">Flooring</h5>
 
