updated index and other files

--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,12 @@
 		<meta charset="utf-8" />
 		<title>Modern Choice - Home Repair</title>
 		<meta content="width=device-width, initial-scale=1.0" name="viewport" />
-		<meta content="" name="keywords" />
-		<meta content="" name="description" />
+		<meta name="keywords" content="new home renovation, interior design, painting, tiling, renovation, remodeling, home repair, ceramics, basements, flooring, windows" />
+		<meta name="description" content="Contact Modern Choice Renovation for home repair services. Reach out to us for inquiries, quotes, and consultations. Serving the Lower Mainland, Fraser Valley, and Chilliwack." />
+
 
 		<!-- Favicon -->
-		<link href="img/favicon.ico" rel="icon" />
+		<link href="img/favicon.ico" rel="icon" alt="Modern Choice Renovation Favicon" />
 
 		<!-- Google Web Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -168,7 +169,7 @@
 						<h4 class="text-light mb-4">Contact</h4>
 						<p><i class="fa fa-phone-alt me-3"></i><a href="tel:+17782400828">+1 778-240-0828</a></p>
 						<p><i class="fa fa-envelope me-3"></i><a href="mailto:shafiq99@hotmail.ca">shafiq99@hotmail.ca</a></p>
-						<p><i class="fab fa-instagram me-3"></i><a href="instagram://user?username=modernchoicerenovation">modernchoicerenovation</a></p>
+						<p><i class="fab fa-instagram me-3"></i><a href="instagram://user?username=modernchoicerenovation" target="_blank" rel="noopener noreferrer">modernchoicerenovation</a></p>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<h4 class="text-light mb-4">Quick Links</h4>
@@ -209,5 +210,25 @@
 
 		<!-- Template Javascript -->
 		<script src="js/main.js"></script>
+		<!-- Example schema markup for contact information -->
+<script type="application/ld+json">
+	{
+	   "@context": "http://schema.org",
+	   "@type": "LocalBusiness",
+	   "name": "Modern Choice Renovation",
+	   "address": {
+		  "@type": "PostalAddress",
+
+		  "addressLocality": "Chilliwack, Fraser Valley",
+		  "addressRegion": "British Coloumbia",
+		  
+		  "addressCountry": "Canada"
+	   },
+	   "telephone": "+1 778-240-0828",
+	   "email": "shafiq99@hotmail.ca",
+	   "openingHours": "Mo-Fr 09:00-17:00"
+	}
+ </script>
+ 
 	</body>
 </html>
