--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Modern Choice - Home Repair</title>
+		<title>Modern Choice Renovation - Interior Design, Painting, Tiling, and Renovation Services</title>
+
 		<meta content="width=device-width, initial-scale=1.0" name="viewport" />
-		<meta content="" name="keywords" />
-		<meta content="" name="description" />
+		<meta name="keywords" content="new home renovation, interior design, painting, tiling, renovation, remodeling, home repair, ceramics, basements, flooring, windows" />
+		<meta name="description" content="Modern Choice Renovation offers expert services in interior design, painting, tiling, bathroom and kitchen renovation, and remodeling. Contact us for high-quality home repair solutions." />
+
 
 		<!-- Favicon -->
 		<link href="img/favicon.ico" rel="icon" />
@@ -339,7 +341,7 @@
 								<img
 									class="img-fluid mb-4"
 									src="img/testimonial-1.jpg"
-									alt=""
+									alt="Happy client in a renovated kitchen"
 								/>
 								<p class="fs-5 para">
 									"Shafiq transformed our outdated kitchen into a modern
@@ -357,7 +359,7 @@
 								<img
 									class="img-fluid mb-4"
 									src="img/testimonial-2.jpg"
-									alt=""
+									alt="Happy client in a renovated bathroom"
 								/>
 								<p class="fs-5 para">
 									"Exceptional craftsmanship and a keen eye for design! Shafiq
@@ -421,7 +423,7 @@
 						<h4 class="text-light mb-4">Contact</h4>
 						<p><i class="fa fa-phone-alt me-3"></i><a href="tel:+17782400828">+1 778-240-0828</a></p>
 						<p><i class="fa fa-envelope me-3"></i><a href="mailto:shafiq99@hotmail.ca">shafiq99@hotmail.ca</a></p>
-						<p><i class="fab fa-instagram me-3"></i><a href="instagram://user?username=modernchoicerenovation">modernchoicerenovation</a></p>
+						<p><i class="fab fa-instagram me-3"></i><a href="instagram://user?username=modernchoicerenovation" target="_blank" rel="noopener noreferrer">modernchoicerenovation</a></p>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<h4 class="text-light mb-4">Quick Links</h4>
