--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Modern Choice Renovation - Interior Design, Painting, Tiling, and Renovation Services</title>
 
 		<meta content="width=device-width, initial-scale=1.0" name="viewport" />
-		<meta name="keywords" content="new home renovation, interior design, painting, tiling, renovation, remodeling, home repair, ceramics, basements, flooring, windows" />
+		<meta name="keywords" content="chilliwack renovation services,renovation services in fraser valley,chilliwack renovation,chilliwack interior designs,chilliwack renovation expert,renovation expert in canada,renovation services in canada,BC canada renovator,new home renovation, interior design, painting, tiling, renovation, remodeling, home repair, ceramics, basements, flooring, windows,attic renovation, attic renovation ideas, attic renovation services chilliwack" />
 		<meta name="description" content="Modern Choice Renovation offers expert services in interior design, painting, tiling, bathroom and kitchen renovation, and remodeling. Contact us for high-quality home repair solutions." />
 
 
