--- a/service.html
+++ b/service.html
@@ -4,8 +4,7 @@
 		<meta charset="utf-8" />
 		<title>Modern Choice - Home Repair</title>
 		<meta content="width=device-width, initial-scale=1.0" name="viewport" />
-		<meta name="keywords" content="new home renovation, interior design, painting, tiling, renovation, remodeling, home repair, ceramics, basements, flooring, windows" />
-		<meta name="description" content="Explore our construction and renovation solutions at Modern Choice Renovation. View our portfolio of completed projects in Lower Mainland and Fraser Valley." />
+		<meta name="keywords" content="chilliwack renovation services,renovation services in fraser valley,chilliwack renovation,chilliwack interior designs,chilliwack renovation expert,renovation expert in canada,renovation services in canada,BC canada renovator,new home renovation, interior design, painting, tiling, renovation, remodeling, home repair, ceramics, basements, flooring, windows,attic renovation, attic renovation ideas, attic renovation services chilliwack" />		<meta name="description" content="Explore our construction and renovation solutions at Modern Choice Renovation. View our portfolio of completed projects in Lower Mainland and Fraser Valley." />
 
 
 		<!-- Favicon -->
