--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>Modern Choice - Home Repair</title>
 		<meta content="width=device-width, initial-scale=1.0" name="viewport" />
-		<meta name="keywords" content="chilliwack renovation services,renovation services in fraser valley,chilliwack renovation,chilliwack interior designs,chilliwack renovation expert,renovation expert in canada,renovation services in canada,BC canada renovator,new home renovation, interior design, painting, tiling, renovation, remodeling, home repair, ceramics, basements, flooring, windows,attic renovation, attic renovation ideas, attic renovation services chilliwack" />		<meta name="description" content="Contact Modern Choice Renovation for home repair services. Reach out to us for inquiries, quotes, and consultations. Serving the Lower Mainland, Fraser Valley, and Chilliwack." />
+		<meta name="keywords" content="complete renovation,retiling,newly renovated,bathroom renovation,kitchen renovation,basement renovation,bathroom renovation ideas,renovation contractors,kitchen renovation ideas,home renovation near me,chilliwack renovation services,renovation services in fraser valley,chilliwack renovation,chilliwack interior designs,chilliwack renovation expert,renovation expert in canada,renovation services in BC canada,BC canada renovator,new home renovation, interior design, painting, tiling, renovation, remodeling, home repair, ceramics, basements, flooring, windows,attic renovation, attic renovation ideas, attic renovation services chilliwack" />
 
 
 		<!-- Favicon -->
