--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Modern Choice - Home Repair</title>
+		<title>Modern Choice Renovation - Home Repair</title>
 		<meta content="width=device-width, initial-scale=1.0" name="viewport" />
-		<meta name="keywords" content="complete renovation,retiling,newly renovated,bathroom renovation,kitchen renovation,basement renovation,bathroom renovation ideas,renovation contractors,kitchen renovation ideas,home renovation near me,chilliwack renovation services,renovation services in fraser valley,chilliwack renovation,chilliwack interior designs,chilliwack renovation expert,renovation expert in canada,renovation services in BC canada,BC canada renovator,new home renovation, interior design, painting, tiling, renovation, remodeling, home repair, ceramics, basements, flooring, windows,attic renovation, attic renovation ideas, attic renovation services chilliwack" />
+		<meta name="keywords" content="home improvement, bathroom remodel, kitchen remodel, plumbing, electrical,windows,complete renovation,retiling,newly renovated,bathroom renovation,kitchen renovation,basement renovation,bathroom renovation ideas,renovation contractors,kitchen renovation ideas,home renovation near me,chilliwack renovation services,renovation services in fraser valley,chilliwack renovation,chilliwack interior designs,chilliwack renovation expert,renovation expert in canada,renovation services in BC canada,BC canada renovator,new home renovation, interior design, painting, tiling, renovation, remodeling, home repair, ceramics, basements, flooring, windows,attic renovation, attic renovation ideas, attic renovation services chilliwack" />
+		<meta name="description" content="Contact Modern Choice Renovation for all your home repair and renovation needs. Reach out to us for professional services in Chilliwack, Fraser Valley, and beyond. Call us at +1 778-240-0828 or email shafiq99@hotmail.ca.">
 
 
 		<!-- Favicon -->
